# fake_rdma

./: .clang-format  .gitmodules  CMakeLists.txt  prebuild.sh
fake_device/: CMakeLists.txt
fake_device/include/: rdma.h
fake_device/kernel/uapi/rdma/: rdma_netlink.h
fake_device/src/: rdma.c  rdma_utils.c
include/: whole_utils.h
include/kernel/: libnetlink.h  list.h  mnl_utils.h
include/libs/mnl/: utils.h
libs/mnl/: utils.c
libs/netlink/: utils.c
